# cryptarena-svm

./: .gitignore  ARENA_DURATION_UPDATE.md  Anchor.toml  README.md  TOKEN_WHITELIST.md  UPDATES_SUMMARY.md  package-lock.json  package.json  tsconfig.json
docs/: INDEXER_SPEC.md
programs/cryptarena-faucet/: Cargo.toml
programs/cryptarena-faucet/src/: lib.rs
programs/cryptarena-sol/: Cargo.toml  keypair.json
programs/cryptarena-sol-test/: Cargo.toml  keypair.json
programs/cryptarena-sol-test/src/: lib.rs
programs/cryptarena-sol/src/: lib.rs
programs/cryptarena-svm/: Cargo.toml
programs/cryptarena-svm-test/: Cargo.toml
programs/cryptarena-svm-test/src/: lib.rs
programs/cryptarena-svm/src/: lib.rs
scripts/: add-whitelisted-token.ts  airdrop-token.ts  arena-full-test.ts  arena-onchain-test.ts  check-state.ts  check-whitelist.ts  claim-arena-winnings.ts  claim-reward.ts  claim-tokens.ts  end-arena.ts  fill-arena.ts  finalize-active-arena.ts  initialize-whitelist.ts  mint-test-tokens.ts  mint-tokens-cmc.ts  remove-whitelisted-token.ts  setup-and-claim-faucet.ts  setup-faucet.ts  start-arena.ts  test-arena-full.ts  test-complete-arena.ts  test-double-claim.ts  test-duration-not-complete.ts  test-enter.ts  test-max-same-asset.ts  test-non-winner-claim.ts  test-three-winners.ts  test-two-winners.ts  test-unauthorized.ts  update-arena-duration.ts  withdraw-treasury-fees.ts
scripts/cryptarena-sol/: check-arena-balance.ts  claim-treasury-fee.ts  full-flow-test-sol.ts  initialize-whitelist-sol-test.ts  initialize-whitelist-sol.ts
test-wallets/: token-mints-admin.json  token-mints.json
tests/: arena-simulation.ts  cryptarena-svm.ts
tests/cryptarena-sol/: cryptarena-sol.ts
