[package]
name = "cryptarena-svm-test"
version = "0.1.0"
description = "Cryptarena Test Program with Pyth Hermes Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptarena_svm_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
pyth-solana-receiver-sdk = "1.1.0"
